2010-01-08  Eric Belanger  <eric@archlinux.org>

	* pysolfc 2.0-1
	* Upstream update
	* Updated license to GPL3
	* Switched to 'any' arch

2009-03-31  Eric Belanger  <eric@archlinux.org>

	* pysolfc 1.1-3
	* Added .desktop file (close FS#13388)
	* Rebuild against python 2.6 (FS#13831)
	* Added ChangeLog