@@ -1,25 +1,25 @@
 # $Id$
-# Maintainer: Eric Belanger <eric@archlinux.org>
+# Maintainer: Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
 # Contributor: Eric Belanger <eric@archlinux.org>
 
 pkgname=pysolfc
 pkgver=2.0
-pkgrel=1
+pkgrel=2
 pkgdesc="PySol (Fan Club edition) is an exciting collection of more than 1000 solitaire games"
 arch=('any')
 url="http://pysolfc.sourceforge.net/"
 license=('GPL3')
-depends=('python' 'tk>=8.5.0' 'pysol-sound-server' 'pil')
+depends=('python' 'tk>=8.5.0' 'pysol-sound-server' 'python-imaging')
 conflicts=('pysol')
 replaces=('pysol')
 options=('!makeflags')
-source=(http://downloads.sourceforge.net/pysolfc/PySolFC-${pkgver}.tar.bz2 pysolfc.desktop)
-md5sums=('f9ee647947924efdf1d24af179d3cc0a' '5d889261c5505165ce087f4f7e684fbd')
-sha1sums=('7a11aa04b3f5147396c8b5011228094c10ddc257' '50be656cec547c019abc8d0bce7758cf71418ec7')
+source=(http://downloads.sourceforge.net/pysolfc/PySolFC-${pkgver}.tar.bz2)
+md5sums=('f9ee647947924efdf1d24af179d3cc0a')
 
 build() {
-  cd "${srcdir}/PySolFC-${pkgver}"
-  python setup.py install --root="${pkgdir}" || return 1
-  install -D -m644 ../pysolfc.desktop "${pkgdir}/usr/share/applications/pysolfc.desktop" || return 1
-  ln -s pysol.py "${pkgdir}/usr/bin/pysol" || return 1
+  cd ${srcdir}/PySolFC-${pkgver}
+
+  python setup.py install --root=${pkgdir} || return 1
+
+  ln -s pysol.py ${pkgdir}/usr/bin/pysol || return 1
 }
